tests/bad/super_without_dot.td
/// fail: Expected `.` after `super`

class Foo {}
class Bar extends Foo {
    def bar(this) {
        super
    }
}